--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,3 +29,14 @@ steps:
     version: 5.0.x
     performMultiLevelLookup: true
     includePreviewVersions: true # Required for preview versions
+- task: PublishCucumberReport@1
+  displayName: 'Publish Cucumber Report'
+  inputs:
+    jsonDir: ./results/cucumber
+    outputPath: ./results/cucumber
+    metadata: |
+     {
+       "ApplicationUrl": "$(App.Url)"
+     }
+    name: 'Functional Tests'
+    title: API
