Update azure-pipelines-1.yml for Azure Pipelines
Add a cucumber report

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,6 +12,8 @@ pool:
 variables:
   buildConfiguration: 'Release'
 
+--format=json:./results/cucumber.json
+
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
